Add testcase for enum with validation, rel #311
