# gen/main/java/issue/_331/DefaultApi.java
@@ -64,6 +64,9 @@ public interface DefaultApi {
 			java.util.Optional<java.util.List<java.lang.String>> withoutValidation,
 			@io.micronaut.core.annotation.NonNull
 			@io.micronaut.http.annotation.QueryValue
+			java.util.Optional<java.util.List<@javax.validation.constraints.NotNull @javax.validation.Valid StringWithEnum>> withEnum,
+			@io.micronaut.core.annotation.NonNull
+			@io.micronaut.http.annotation.QueryValue
 			java.util.Optional<java.util.List<java.lang.@javax.validation.constraints.NotNull @javax.validation.constraints.Email String>> withEmail,
 			@io.micronaut.core.annotation.NonNull
 			@io.micronaut.http.annotation.QueryValue
