# gen/main/java/issue/_331/ModelString.java
@@ -5,6 +5,7 @@ package issue._331;
 public class ModelString {
 
 	public static final java.lang.String JSON_PROPERTY_WITHOUT_VALIDATION = "withoutValidation";
+	public static final java.lang.String JSON_PROPERTY_WITH_ENUM = "withEnum";
 	public static final java.lang.String JSON_PROPERTY_WITH_EMAIL = "withEmail";
 	public static final java.lang.String JSON_PROPERTY_WITH_PATTERN = "withPattern";
 	public static final java.lang.String JSON_PROPERTY_WITH_MINIMUM = "withMinimum";
@@ -14,6 +15,10 @@ public class ModelString {
 	@com.fasterxml.jackson.annotation.JsonProperty(JSON_PROPERTY_WITHOUT_VALIDATION)
 	@com.fasterxml.jackson.annotation.JsonInclude(com.fasterxml.jackson.annotation.JsonInclude.Include.NON_NULL)
 	private java.util.List<java.lang.String> withoutValidation;
+
+	@com.fasterxml.jackson.annotation.JsonProperty(JSON_PROPERTY_WITH_ENUM)
+	@com.fasterxml.jackson.annotation.JsonInclude(com.fasterxml.jackson.annotation.JsonInclude.Include.NON_NULL)
+	private java.util.List<@javax.validation.constraints.NotNull @javax.validation.Valid StringWithEnum> withEnum;
 
 	@com.fasterxml.jackson.annotation.JsonProperty(JSON_PROPERTY_WITH_EMAIL)
 	@com.fasterxml.jackson.annotation.JsonInclude(com.fasterxml.jackson.annotation.JsonInclude.Include.NON_NULL)
@@ -47,6 +52,7 @@ public class ModelString {
 		}
 		ModelString other = (ModelString) object;
 		return java.util.Objects.equals(withoutValidation, other.withoutValidation)
+				&& java.util.Objects.equals(withEnum, other.withEnum)
 				&& java.util.Objects.equals(withEmail, other.withEmail)
 				&& java.util.Objects.equals(withPattern, other.withPattern)
 				&& java.util.Objects.equals(withMinimum, other.withMinimum)
@@ -56,7 +62,7 @@ public class ModelString {
 
 	@Override
 	public int hashCode() {
-		return java.util.Objects.hash(withoutValidation, withEmail, withPattern, withMinimum, withMaximum, withMinimumAndMaximum);
+		return java.util.Objects.hash(withoutValidation, withEnum, withEmail, withPattern, withMinimum, withMaximum, withMinimumAndMaximum);
 	}
 
 	@Override
@@ -64,6 +70,7 @@ public class ModelString {
 		return new java.lang.StringBuilder()
 				.append("ModelString[")
 				.append("withoutValidation=").append(withoutValidation).append(",")
+				.append("withEnum=").append(withEnum).append(",")
 				.append("withEmail=").append(withEmail).append(",")
 				.append("withPattern=").append(withPattern).append(",")
 				.append("withMinimum=").append(withMinimum).append(",")
@@ -91,6 +98,26 @@ public class ModelString {
 	public ModelString removeWithoutValidationItem(java.lang.String withoutValidationItem) {
 		if (this.withoutValidation != null) {
 			this.withoutValidation.remove(withoutValidationItem);
+		}
+		return this;
+	}
+
+	public ModelString withEnum(java.util.List<@javax.validation.constraints.NotNull @javax.validation.Valid StringWithEnum> newWithEnum) {
+		this.withEnum = newWithEnum;
+		return this;
+	}
+	
+	public ModelString addWithEnumItem(StringWithEnum withEnumItem) {
+		if (this.withEnum == null) {
+			this.withEnum = new java.util.ArrayList<>();
+		}
+		this.withEnum.add(withEnumItem);
+		return this;
+	}
+
+	public ModelString removeWithEnumItem(StringWithEnum withEnumItem) {
+		if (this.withEnum != null) {
+			this.withEnum.remove(withEnumItem);
 		}
 		return this;
 	}
@@ -203,6 +230,14 @@ public class ModelString {
 
 	public void setWithoutValidation(java.util.List<java.lang.String> newWithoutValidation) {
 		this.withoutValidation = newWithoutValidation;
+	}
+
+	public java.util.List<@javax.validation.constraints.NotNull @javax.validation.Valid StringWithEnum> getWithEnum() {
+		return withEnum;
+	}
+
+	public void setWithEnum(java.util.List<@javax.validation.constraints.NotNull @javax.validation.Valid StringWithEnum> newWithEnum) {
+		this.withEnum = newWithEnum;
 	}
 
 	public java.util.List<java.lang.@javax.validation.constraints.NotNull @javax.validation.constraints.Email String> getWithEmail() {
